--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -41,6 +41,7 @@ input[type=radio] {
 }
 input[type=radio] + label {
 	position: relative;
+	cursor: pointer;
 }
 input[type=radio] + label::before {
 	content: '';
@@ -87,7 +88,10 @@ main {
 	max-width: 100%;
 	width: 100%;
 	background-color: var(--main-background-color);
-	padding: 20px;
+	padding: 20px 20px 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: stretch;
 }
 main header {
 	display: flex;
@@ -95,6 +99,7 @@ main header {
 	justify-content: space-between;
 	align-items: center;
 	margin-bottom: 78px;
+	flex: none;
 }
 main header .favourite-open {
 	display: flex;
@@ -124,7 +129,7 @@ main.open::after {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0,0,0, 0.3);
+	background-color: rgba(0, 0, 0, 0.3);
 }
 main header .favourite-open .burger-button-block span::before {
 	content: '';
@@ -146,6 +151,7 @@ main header .favourite-open .burger-button-block span::after {
 }
 main .search-block {
 	margin-bottom: 40px;
+	flex: none;
 }
 main .search-block p {
 	font-weight: 500;
@@ -183,7 +189,7 @@ main ul.search-group ul.categories-group li button.category-select-button {
 	padding: 4px 13px;
 	cursor: pointer;
 }
-main ul.search-group ul.categories-group li button.category-select-button:first-of-type{
+main ul.search-group ul.categories-group li button.category-select-button:first-of-type {
 	margin-bottom: 16px;
 }
 main ul.search-group li:last-of-type {
@@ -201,6 +207,26 @@ main button.joke-button {
 	background: var(--main-button-background-color);
 	padding: 10px 40px;
 	border-radius: 10px;
+	cursor: pointer;
+	transition: all .1s linear;
+}
+main button.joke-button:hover {
+	box-shadow: 1px 2px 5px -1px #000000;
+	transition: all .1s linear;
+}
+main button.joke-button:active {
+	background: linear-gradient(90.55deg, #8EA7FF 0%, #7291FF 0%);
+	box-shadow: none;
+	transition: all .1s linear;
+}
+main .result-block {
+	overflow-y: scroll;
+	flex: auto;
+	overflow: -moz-scrollbars-none;
+	-ms-overflow-style: none;
+}
+main .result-block::-webkit-scrollbar {
+	width: 0;
 }
 main .result-block-item {
 	position: relative;
@@ -215,6 +241,10 @@ main .result-block-item .icon-heart-block {
 	right: 20px;
 	width: 20px;
 	height: 17px;
+	cursor: pointer;
+}
+main .result-block-item .icon-heart-block:hover svg {
+	transform: scale(1.2);
 }
 main .result-block-item .icon-heart-block svg {
 	position: relative;
@@ -229,6 +259,7 @@ main .result-block-item .result-block-item_container {
 }
 main .result-block-item .result-block-item_container .result-block-item_wrapper {
 	max-width: calc(100% - 60px);
+	width: 100%;
 }
 main .result-block-item .icon-message-block {
 	position: relative;
@@ -257,7 +288,6 @@ main .result-block-item .result-block_id a {
 main .result-block-item .result-block_description .footer {
 	display: flex;
 	flex-direction: column;
-
 }
 main .result-block-item .result-block_description p {
 	font-weight: 400;
@@ -301,7 +331,7 @@ main .search-input::placeholder {
 	line-height: 1.37;
 	color: var(--second-font-color);
 }
-	/******************************************************/
+/******************************************************/
 aside {
 	position: absolute;
 	top: 0;
@@ -311,8 +341,11 @@ aside {
 	width: 100%;
 	height: 100%;
 	background-color: var(--second-background-color);
-	padding: 20px;
+	padding: 20px 20px 0;
 	transition: right .5s linear;
+	display: flex;
+	flex-direction: column;
+	justify-content: stretch;
 }
 aside.open {
 	right: 0;
@@ -327,6 +360,7 @@ aside header {
 	justify-content: flex-end;
 	align-items: center;
 	margin-bottom: 40px;
+	flex: none;
 }
 aside .burger-button-block span::before {
 	content: '';
@@ -349,9 +383,13 @@ aside .burger-button-block span::after {
 	transform: rotateZ(-45deg);
 }
 aside .favourites-block {
-	padding-bottom: 20px;
-	max-height: 100%;
 	overflow-y: scroll;
+	flex: auto;
+	overflow: -moz-scrollbars-none;
+	-ms-overflow-style: none;
+}
+aside .favourites-block::-webkit-scrollbar {
+	width: 0;
 }
 aside .favourite-block-item {
 	position: relative;
@@ -367,6 +405,10 @@ aside .favourite-block-item .icon-heart-block {
 	position: absolute;
 	top: 20px;
 	right: 20px;
+	cursor: pointer;
+}
+aside .favourite-block-item .icon-heart-block:hover svg {
+	transform: scale(1.2);
 }
 aside .favourite-block-item .favourite-block-item_container {
 	display: flex;
@@ -418,15 +460,12 @@ aside .favourite-block-item .favourite-block_description span {
 }
 /************************************************************/
 @media (min-width: 576px) {
-
 }
 @media (min-width: 768px) {
-	
 }
 @media (min-width: 836px) {
-
 }
-@media(min-width: 992px) {
+@media (min-width: 992px) {
 	input[type=radio]:hover + label::before {
 		border-color: var(--main-font-color);
 	}
@@ -434,19 +473,18 @@ aside .favourite-block-item .favourite-block_description span {
 		width: 836px;
 	}
 	main {
-		padding: 40px;
+		padding: 40px 40px 0;
 	}
 	main .result-block-item .result-block_description .footer {
 		flex-direction: row;
 		justify-content: space-between;
 	}
 	aside {
-		padding: 40px;
+		padding: 40px 40px 0;
 		max-width: 480px;
 	}
 }
 @media (min-width: 1024px) {
-
 }
 @media screen and (min-width: 1200px) {
 	.container {
@@ -454,7 +492,6 @@ aside .favourite-block-item .favourite-block_description span {
 	}
 }
 @media (min-width: 1400px) {
-
 }
 @media (min-width: 1440px) {
 	.container {
@@ -463,7 +500,7 @@ aside .favourite-block-item .favourite-block_description span {
 		margin: auto;
 	}
 	main {
-		padding: 40px 140px;
+		padding: 40px 140px 0;
 	}
 	main header .favourite-open {
 		display: none;
@@ -477,17 +514,6 @@ aside .favourite-block-item .favourite-block_description span {
 	aside .burger-button-block {
 		display: none;
 	}
-	/*aside .favourites-block {
-		overflow: -moz-scrollbars-none;
-		overflow-y: scroll;
-		max-height: 790px;
-		-ms-overflow-style: none;
-	}*/
-	aside .favourites-block::-webkit-scrollbar {
-		width: 0;
-	}
-
 }
 @media (min-width: 1600px) {
-
 }
